accept trip api
